# Raven

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
assets/: dialogues.yaml  main.yaml  style.yaml
assets/background/: test.png~
assets/gui/: choice_hover_background2.png~
assets/images/: 2.png~  3.png~  4.png~  5.png~  6.png~
assets/ron/: ron.ron
assets/scenes/: load_scene_example-new.scn.ron  load_scene_example.scn.ron  sprite_scene.scn.ron
assets/shaders/: border.wgsl  mouse_glow.wgsl  parallax_spotlight.wgsl  spotlight.wgsl
assets/swf/: 234.swf  345_c7.swf  345_c8.swf  345_new.swf  777.swf  czer scene.swf  czer.swf  loading界面-加载动画1.swf  loading界面-过渡动画1.swf  loading界面-过渡动画2.swf  loading界面-进度数字.swf  loading鐣岄潰-鍔犺浇鍔ㄧ敾2.swf  ray_sceen.swf
cli/: Cargo.toml
cli/mac/: Cargo.toml
cli/mac/src/: main.rs
cli/src/: main.rs
cli/win/src/: main.rs
docs/: book.toml  custom.css
docs/src/: SUMMARY.md
docs/src/advanced/: i18n.md  (+3 more)
examples/: CursorIcon.rs  Shake.rs  basic.rs  bevy_load.rs  bevy_picking.rs  box.rs  box1.rs  btn5.rs  btnr.rs  buttonrs.rs  config.toml  cures.rs  demo.rs  disslove.rs  fade_in.rs  fade_out.rs  fps-show.rs  fps.rs  fule.rs  goto.rs  mac-button.rs  mac-test1.rs  mac-test2.rs  mac-test4.rs  mac-test5.rs  mac-win2.rs  main.rs  main_menu.rs  menu.rs  msgbox.rs  msgbox2.rs  nav_button.rs  pack.rs  sceen-ron.rs  sceen2.rs  sceen3.rs  sceen4.rs  sceen5.rs  sceen6.rs  sceen8.rs  (+39 more)
src/: lib.rs  main.rs  main_back.rs  test.rs
src/audio/: mod.rs
src/button/: btns.rs
src/config/: mod.rs
src/demo/: main.rs
src/dissolve/: mod.rs
src/game/: events.rs  media_query.rs  mod.rs
src/menu/: mod.rs
src/position/: mod.rs
src/raven/: back.rs  bevy_integration.rs  config.rs  menu.rs  mod.rs
src/style/: mod.rs
src/toolbar/: mod.rs
src/transition/: fade.rs  mod.rs  plugin.rs
src/typewriter/: mod.rs
src/url/: mod.rs
(+87 files in other folders)
