[package]
name = "Raven"
version = "0.1.6"
edition = "2024"
authors = ["Furau"]
license = "MIT OR Apache-2.0"

[dependencies]
bevy_flash = { git = "https://gitee.com/Furau/bevy_flash"}
bevy = { version = "0.17.1", features = ["bevy_dev_tools"] }
rand = "0.8"

# 公共工具库
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
